--- a/EatSmart/app/src/main/res/layout/activity_filter.xml
+++ b/EatSmart/app/src/main/res/layout/activity_filter.xml
@@ -122,4 +122,41 @@
         android:layout_below="@+id/tableLayout"
         android:layout_centerHorizontal="true" />
 
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/radioGroup5"
+        android:orientation="horizontal"
+        android:layout_below="@+id/textView37"
+        android:layout_centerHorizontal="true">
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_budget_1"
+            android:id="@+id/radioButton39"
+             />
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_budget_2"
+            android:id="@+id/radioButton40"
+
+            />
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_budget_3"
+            android:id="@+id/radioButton41"
+             />
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_budget_4"
+            android:id="@+id/radioButton42"
+            />
+    </RadioGroup>
+
+
+
+
 </RelativeLayout>
