finished filter page. confirmed data transfer to ifl page

--- a/EatSmart/app/src/main/res/layout/activity_im_feeling_lucky.xml
+++ b/EatSmart/app/src/main/res/layout/activity_im_feeling_lucky.xml
@@ -132,4 +132,23 @@
         android:id="@+id/textView48"
         android:layout_below="@+id/textView47"
         android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/hint_location"
+        android:id="@+id/textView50"
+        android:layout_below="@+id/textView48"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Medium Text"
+        android:id="@+id/textView51"
+        android:layout_below="@+id/textView50"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
