--- a/EatSmart/app/src/main/res/layout/activity_filter.xml
+++ b/EatSmart/app/src/main/res/layout/activity_filter.xml
@@ -4,8 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.jerem.eatsmart.filter"
-    android:onClick="get_entry">
+    tools:context="com.example.jerem.eatsmart.filter">
 
     <TextView
         android:layout_width="wrap_content"
@@ -28,18 +27,6 @@
         android:gravity="center"
         android:layout_below="@+id/textView33"
         android:layout_centerHorizontal="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/button_get_entry"
-        android:id="@+id/button13"
-        android:onClick="get_entry"
-        android:layout_gravity="center_vertical"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/textView33"
-        android:layout_alignEnd="@+id/textView33"
-        android:layout_marginBottom="54dp" />
 
     <TableLayout
         android:layout_width="wrap_content"
@@ -154,6 +141,64 @@
             android:text="@string/text_budget_4"
             android:id="@+id/radioButton42"
             />
+    </RadioGroup>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/hint_location"
+        android:id="@+id/textView49"
+        android:layout_below="@+id/radioGroup5"
+        android:layout_centerHorizontal="true" />
+
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView49"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/radioGroup6">
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_location_1"
+            android:id="@+id/radioButton43"
+             />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_location_2"
+            android:id="@+id/radioButton44"
+             />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_location_3"
+            android:id="@+id/radioButton45"
+            />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_location_4"
+            android:id="@+id/radioButton46"
+             />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_location_5"
+            android:id="@+id/radioButton47"
+             />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_location_6"
+            android:id="@+id/radioButton48"
+             />
     </RadioGroup>
 
 
