--- a/EatSmart/app/src/main/res/layout/activity_home_restaurant.xml
+++ b/EatSmart/app/src/main/res/layout/activity_home_restaurant.xml
@@ -90,9 +90,10 @@
         android:layout_height="200dp"
         android:id="@+id/imageView6"
         android:scaleType="fitXY"
-        android:src="@drawable/button_ifl"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:visibility="visible"
+        android:background="#000000" />
 
     <Button
         android:layout_width="wrap_content"
