--- a/EatSmart/app/src/main/res/layout/activity_home_restaurant.xml
+++ b/EatSmart/app/src/main/res/layout/activity_home_restaurant.xml
@@ -16,7 +16,8 @@
         android:layout_above="@+id/textView13"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="#ff0000" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -26,7 +27,8 @@
         android:id="@+id/textView9"
         android:layout_above="@+id/textView15"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="#ff0000" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -36,7 +38,8 @@
         android:id="@+id/textView12"
         android:layout_above="@+id/textView17"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="#ff0000" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -46,7 +49,8 @@
         android:id="@+id/textView14"
         android:layout_above="@+id/textView18"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="#ff0000" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -90,10 +94,10 @@
         android:layout_height="200dp"
         android:id="@+id/imageView6"
         android:scaleType="fitXY"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:visibility="visible"
-        android:background="#000000" />
+        android:background="#000000"
+        android:layout_below="@+id/textView54"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -103,5 +107,17 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="43dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:maxLines="2"
+        android:singleLine="false"
+        android:text="RESTAURANT OWNER\nSIGNUP"
+        android:id="@+id/textView54"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
+        android:textColor="#ff0000" />
 
 </RelativeLayout>
