--- a/EatSmart/app/src/main/res/layout/activity_restaurant_sign_up.xml
+++ b/EatSmart/app/src/main/res/layout/activity_restaurant_sign_up.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,28 +13,29 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView3"
+        android:id="@+id/imageView10"
         android:src="@drawable/name_logo_transparentbg"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@+id/scrollView"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/title_activity_restaurant_signup"
-        android:id="@+id/textView2"
-        android:layout_alignBottom="@+id/imageView3"
+        android:maxLines="2"
+        android:singleLine="false"
+        android:text="RESTAURANT OWNER\nSIGNUP"
+        android:id="@+id/textView55"
         android:textColor="#ffffff"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@+id/scrollView"
         android:textAlignment="center"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
+        android:layout_below="@+id/imageView10"
+        android:layout_centerHorizontal="true" />
 
     <EditText
-        android:id="@+id/editTextUserName"
-        android:hint="@string/username_text"
+        android:id="@+id/editText5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -42,51 +43,87 @@
         android:background="#ffffff"
         android:minWidth="300dp"
         android:minHeight="40dp"
-        android:singleLine="true" />
+        android:singleLine="true"
+        android:layout_below="@+id/textView56"
+        android:layout_centerHorizontal="true" />
 
     <EditText
-        android:id="@+id/editTextPassword"
+        android:id="@+id/editText8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="@string/password_text"
         android:inputType="textPassword"
         android:layout_gravity="center_horizontal"
         android:textAlignment="center"
         android:background="#ffffff"
         android:minWidth="300dp"
         android:minHeight="40dp"
-        android:singleLine="true" />
+        android:singleLine="true"
+        android:layout_below="@+id/textView57"
+        android:layout_alignLeft="@+id/editText9"
+        android:layout_alignStart="@+id/editText9" />
 
     <EditText
-        android:id="@+id/editTextConfirmPassword"
+        android:id="@+id/editText9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="@string/confirm_password_text"
         android:inputType="textPassword"
         android:layout_gravity="center_horizontal"
         android:textAlignment="center"
         android:minWidth="300dp"
         android:minHeight="40dp"
         android:background="#ffffff"
-        android:singleLine="false" />
+        android:singleLine="false"
+        android:layout_below="@+id/textView58"
+        android:layout_centerHorizontal="true" />
 
     <ImageButton
-        android:layout_width="wrap_content"
+        android:layout_width="128dp"
         android:layout_height="wrap_content"
-        android:id="@+id/buttonCreateAccount"
-        android:layout_marginBottom="47dp"
+        android:id="@+id/imageButton7"
         android:clickable="true"
         android:contentDescription="@string/button_sign_up"
-        android:src="@drawable/signup_bt"
+        android:src="@drawable/next"
         android:maxHeight="120dp"
         android:maxWidth="120dp"
         android:minHeight="120dp"
         android:minWidth="120dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:background="@null"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.17"
+        android:layout_below="@+id/editText9"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="34dp" />
 
-</LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Username"
+        android:id="@+id/textView56"
+        android:layout_below="@+id/textView55"
+        android:layout_centerHorizontal="true"
+        android:textColor="#ffffff"
+        android:textSize="20dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Password"
+        android:id="@+id/textView57"
+        android:layout_below="@+id/editText5"
+        android:layout_alignLeft="@+id/textView56"
+        android:layout_alignStart="@+id/textView56"
+        android:textColor="#ffffff"
+        android:textSize="20dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Confirm Password"
+        android:id="@+id/textView58"
+        android:textColor="#ffffff"
+        android:textSize="20dp"
+        android:layout_below="@+id/editText8"
+        android:layout_centerHorizontal="true" />
+</RelativeLayout>
