--- a/EatSmart/app/src/main/res/layout/content_details_restaurant.xml
+++ b/EatSmart/app/src/main/res/layout/content_details_restaurant.xml
@@ -23,39 +23,15 @@
         android:minWidth="120dp"
         android:scaleType="fitXY"
         android:adjustViewBounds="true"
-        android:layout_marginBottom="42dp"
+        android:layout_marginBottom="37dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/button6"
-        android:layout_alignStart="@+id/button6" />
-
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:id="@+id/imageView5"
-        android:foreground="#00ffffff"
-        android:scaleType="fitXY"
-        android:background="#ffffff"
-        android:src="@drawable/signin_bg"
-        android:nestedScrollingEnabled="false"
-        android:longClickable="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Select Image"
-        android:id="@+id/button6"
-        android:layout_below="@+id/imageView5"
         android:layout_centerHorizontal="true" />
 
     <ScrollView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/scrollView2"
-        android:layout_below="@+id/button6"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/textView53"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_above="@+id/imageButton2">
@@ -64,6 +40,46 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:id="@+id/imageView5"
+                android:foreground="#00ffffff"
+                android:scaleType="fitXY"
+                android:background="#ffffff"
+                android:src="@drawable/signin_bg"
+                android:nestedScrollingEnabled="false"
+                android:longClickable="true"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/textView53"
+                android:layout_gravity="center_horizontal" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="38dp"
+                android:text="Add Restaurant Logo"
+                android:id="@+id/button6"
+                android:layout_below="@+id/imageView5"
+                android:layout_centerHorizontal="true"
+                android:background="#00ffffff"
+                android:layout_gravity="center_horizontal"
+                android:backgroundTint="#00ffffff"
+                android:textColor="#ffffff" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Restaurant Name"
+                android:id="@+id/textView52"
+                android:layout_gravity="center_horizontal"
+                android:textColor="#ffffff" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/editText4"
+                android:layout_gravity="center_horizontal" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -76,7 +92,7 @@
                 android:textColor="#ffffff" />
 
             <EditText
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/editText6"
                 android:layout_above="@+id/textView3"
@@ -226,7 +242,8 @@
                 android:layout_alignTop="@+id/imageButton2"
                 android:layout_alignLeft="@+id/imageButton2"
                 android:layout_alignStart="@+id/imageButton2"
-                android:layout_gravity="center_horizontal" />
+                android:layout_gravity="center_horizontal"
+                android:textColor="#ffffff" />
 
             <GridLayout
                 android:layout_width="wrap_content"
@@ -282,7 +299,8 @@
                 android:layout_centerVertical="true"
                 android:layout_alignLeft="@+id/textView13"
                 android:layout_alignStart="@+id/textView13"
-                android:layout_gravity="center_horizontal" />
+                android:layout_gravity="center_horizontal"
+                android:textColor="#ffffff" />
 
             <GridLayout
                 android:layout_width="wrap_content"
@@ -354,5 +372,31 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:maxLines="2"
+        android:singleLine="false"
+        android:text="RESTAURANT OWNER\nSIGNUP"
+        android:id="@+id/textView53"
+        android:layout_below="@+id/imageView9"
+        android:layout_centerHorizontal="true"
+        android:textAlignment="center"
+        android:layout_gravity="center"
+        android:gravity="center_horizontal"
+        android:textColor="#ffffff" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:id="@+id/imageView9"
+        android:src="@drawable/name_logo_transparentbg"
+        android:scaleType="fitXY"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="69dp" />
 
 </RelativeLayout>
