created rate and comment page. forwarded ifl page and search page to search_result page. forwarded search_result page to rate and comment page

--- a/EatSmart/app/src/main/res/layout/activity_im_feeling_lucky.xml
+++ b/EatSmart/app/src/main/res/layout/activity_im_feeling_lucky.xml
@@ -151,4 +151,14 @@
         android:layout_below="@+id/textView50"
         android:layout_centerHorizontal="true" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_view_restaurant"
+        android:id="@+id/button14"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="65dp"
+        android:onClick="to_search_result" />
+
 </RelativeLayout>
