--- a/EatSmart/app/src/main/res/layout/activity_search_result.xml
+++ b/EatSmart/app/src/main/res/layout/activity_search_result.xml
@@ -25,4 +25,14 @@
         android:id="@+id/textView23"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_rate_and_comment"
+        android:id="@+id/button13"
+        android:onClick="to_rate_and_comment"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="47dp" />
 </RelativeLayout>
