--- a/EatSmart/app/src/main/res/layout/activity_resto_edit.xml
+++ b/EatSmart/app/src/main/res/layout/activity_resto_edit.xml
@@ -70,7 +70,7 @@
                 android:textColor="#ffffff" />
 
             <EditText
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/editText3"
                 android:layout_above="@+id/textView3"
